<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_host">http://10.21.41.203:8080/douban_bookshopServer/</string>
    
    <string name="app_name">伴我阅读</string>
    <string name="action_settings">Settings</string>
	<string name="app_desc">(豆瓣支持)</string>
	<string name="email">Email： </string>
	<string name="password">密 码： </string>
	<string name="captcha">验证码：</string>
	<string name="btnLogin">登 录</string>
	<string name="btnExit">返 回</string>
	<string name="btnGetCaptcha">获取验证码</string>
	<string name="userAddress">常居地：</string>
	<string name="userDescription">自我介绍：</string>
	<string name="userName">名 号：</string>
	<string name="user_login">用户登录</string>
	<string name="tab_main_nav_me">我的资料</string>
	<string name="tab_main_nav_home">首页</string>
	<string name="tab_main_nav_note">日记</string>
	<string name="tab_main_nav_search">搜索</string>
	<string name="tab_main_nav_more">更多</string>
	<string name="tab_main_nav_fav">我的豆瓣</string>
	<string name="btnUserEdit">编辑</string>
	<string name="menu_delete">删除</string>
	<string name="menu_edit">编辑</string>
	<string name="menu_insert">新增</string>
	<string name="noteTitle">标题</string>
	<string name="noteContent">内容</string>
	<string name="noteInfo">日记</string>
	<string name="btnConfirm">确定</string>
	<string name="btnSave">保存</string>
	<string name="btnCancel">取消</string>
	<string name="iread">我读...</string>
	<string name="isee">我看...</string>
	<string name="ilisten">我听...</string>
	<string name="bookInfo">书籍</string>
	<string name="movieInfo">电影</string>
	<string name="musicInfo">音乐</string>
	<string name="btnShowComment">查看评论</string>
	<string name="btnShowDetail">查看明细</string>
	<string name="loading">正在加载...</string>
	<string name="search">搜索</string>
	<string name="book_search_hint">书籍、作者、关键字</string>
	<string name="movie_search_hint">电影、导演、演员</string>
	<string name="music_search_hint">歌曲、歌手、关键字</string>
	<string name="new_review">评论</string>
	<string name="book_wish">想读</string>
	<string name="book_reading">在读</string>
	<string name="book_read">读过</string>
	<string name="music_wish">想听</string>
	<string name="music_listening">在听</string>
	<string name="music_listened">听过</string>
	<string name="movie_wish">想看</string>
	<string name="movie_watched">看过</string>
	<string name="review_info">评论</string>
	<string name="review_title">评论标题</string>
	<string name="review_content">评论内容</string>
	<string name="review_tags">标签(多个以空格分隔)</string>
	<string name="collect_info">收藏</string>
	<string name="menu_delete_collection">删除收藏</string>
	<string name="tab_main_nav_newbook">新书</string>
	<string name="tab_main_nav_comment">书评</string>
	<string name="tab_main_nav_about">阅听</string>
	<string name="about_title">关于我的豆瓣</string>
	<string name="read_listen">阅听</string>
	<string name="read_books">我要读</string>
	<string name="listen_music">我要听</string>
	
	<string name="topiclist_listname">话题列表</string>
	<string name="tab_main_nav_group">关于</string>
	<string name="topic_view_replymenu">回应</string>
	
	<string name="load_text">正在加载桌面,请稍后...</string>
	<string name="add_text">导入</string>
	<string name="input_text">导入本地小说</string>
    <string name="bookpop_size">字体</string>
    <string name="bookpop_light">亮度</string>
    <string name="bookpop_card">书签</string>
    <string name="bookpop_send">跳转</string>
    <string name="add_text_file">请选择需要导入的文本</string>
    <string name="speak"> 语音</string>
    <string name="home"> 首页</string>
    
    <!-- bookshop !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
    <string name="login_name">用户名：</string>
    <string name="login_pwd">密码：</string>
    <string name="app_bookshopname">豆瓣电子书集市</string>
    <string name="net_error">当前网络不可用，请先连接Internet！</string>
    <string name="my_account_title">我的账户</string>
    <string name="my_ordr_title">我的订单</string>
    <string name="address_manage_title">地址管理</string>
    <string name="my_favorite_title">收藏夹</string>
    <string name="recent_browse_title">最近浏览</string>
    <string name="menu_home">主页</string>
    <string name="menu_search">搜索</string>
    <string name="menu_favorites">收藏夹</string>
    <string name="Recommend_title">世界名著</string>
    <string name="Recommend_title2">诺贝尔获奖作品</string>
    <string name="menu_myorder">我的订单</string>
    <string name="menu_history">浏览历史</string>
    <string name="menu_exit">退出</string>
    <string name="is_positive">确定</string>
    <string name="about_comp">豆瓣图书集市</string>
    <string name="more">更多</string>
    <string name="category_title">分类</string>
    <string name="no_information">加载中...</string>
    <string name="loadTitle"><strong>正在更新数据</strong></string>
    <string name="LoadContent"><strong>请稍候……</strong></string>
    <string name="sales">销量</string>
    <string name="price">价格</string>
    <string name="goodDegree">好评度</string>
    <string name="groundingTime">上架时间</string>
    <string name="goback">返回</string>
    <string name="prod_detail">商品详情</string>
    <string name="shopcar">加入购物车</string>
    <string name="shopcart">购物车</string>
    <string name="collect">收藏</string>
    <string name="prom_bulletin">促销快报</string>
    <string name="limit_buy">限时抢购</string>
    <string name="rulijia1">我的世集合套装</string>
    <string name="jindegai">鲁迅金选集</string>
     <string name="limit_buy_newtime">剩余时间:Time</string>
    <string name="rulijia2" formatted="false">武侠小说促销装\r\n<![CDATA[<font color="#ff0000">买二送二（内附赠品）</font>]]></string>
    <string name="new_money" formatted="false"><![CDATA[限时特价：&#160;&#160;<font color="#ff0000">TIME</font>]]></string>
    <string name="help_title">帮助中心</string>
    <string name="ordr_tel">01088499999</string>
    <string name="get_userinfo">userinfo.jsp</string>
    <string name="get_favorite_list">android_favorite.jsp</string>
    <string name="get_logistics">logistics.jsp</string>
    <string name="get_order_list">ordrlist.jsp</string>
    <string name="get_address_list">android_address.jsp</string>
    <string name="save_address">addresssave.jsp</string>
    <string name="login">checkLogin.jsp</string>
  	<string name="edit">编辑</string>
  	<string name="goBalance">去结算</string>
    
    <string name="topic_plist">topic/plist</string>
    <!-- peiwen -->
    <string name="hotproduct">hotproduct</string>
    <string name="productcommit">product/comment</string>
    <string name="productdetail">product</string>
    <!-- peiwen --> 
 
    <string name="category">category</string>
    <string name="prodList">productlist</string>
    <string name="product">product</string>
    <string name="description">/product/description</string>
    <!-- author:oy uses start -->
    <string name="search_recommend">search/recommend</string>
    <string name="addresslist">addresslist</string>

    <string name="userinfo">Userinfo</string>
    <string name="favorites">favorites</string>
    <string name="mylogin">login</string>
    
    <string name="addresssave">addresssave</string>
    <string name="regist">Register</string>
    <!-- author:oy uses end -->


    <!-- zhangmao -->
    <string name="newproduct">newproduct</string>
    <string name="checkout">checkout</string>
    <string name="ordersubmit">ordersubmit</string>
    <!-- zhangmao -->


    <!-- joychang -->
    <string name="orderlist">orderlist</string>
    <string name="orderdetail">orderdetail</string>
    <!-- joychang -->


    <!-- zclong -->
    <string name="topic">topic</string>
    <string name="productList">productlist</string>
    <!-- zclong -->


    <!-- author:LinKang start -->
    <string name="limitbuy">limitbuy</string>
    <string name="cart">cart</string>
    <string name="brand">brand</string>

    <string-array name="invoice_content">
        <item>图书</item>
        <item>音响</item>
        <item>游戏</item>
        <item>软件</item>
        <item>资料</item>
        <item>办公用品</item>
    </string-array>
    <!-- author:LinKang end -->


    <!-- author:wangzilong start -->
    <string name="filt_title">筛选</string>
    <string name="productlist">productlist</string>
    <!-- author:wangzilong end -->
    
    
    <!-- wangwang start -->
    <string name="prod_list">商品列表</string>
    <string name="ShoppingGuide">购物指南</string>
    <string name="AfterSale">售后服务</string>
    <string name="DeliveryMethod">配送方式</string>
    <string name="userfeedback">用户反馈</string>
    <!-- wangwang end -->
    <string name="login_repwd">确认密码:</string>
</resources>
